examples/test/testpolicy14051.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14051
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key24: value22
      key49: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value11
          key29: value4
          key27: value18
      podSelector:
        matchLabels:
          key37: value48
